<resources>
    <string name="app_name">SimpleMovieApp</string>
    <string name="base_url" translatable="false">https://api.themoviedb.org/3/discover/</string>
    <string name="image_url" translatable="false">https://image.tmdb.org/t/p/w185</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signin_message">Don\'t have account? Sign up</string>
    <string name="register">Register</string>
    <string name="movies">Movies</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="vote_average">Vote average</string>
    <string name="release_date">Release date</string>
    <string name="synopsis">Synopsis</string>
    <string name="original_language">Original language</string>
    <string name="popularity">Popularity</string>
    <string name="back_message">Please click BACK again to exit</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="network_error">Network error</string>
    <string name="list_blank">List</string>
    <string name="grid_blank">Table</string>
    <string name="password_include">Password must be between 4 and 20 symbols</string>
    <string name="login_error">Login error</string>
    <string name="invalid_email">Invalid email</string>
    <string name="register_error">Register error</string>
    <string name="user">User</string>
    <string name="user_exist">already exist</string>
    <string name="user_not_exist">not exist</string>
    <string name="email" translatable="false">Email</string>
    <string name="not_match_password">Passwords not match</string>
    <string name="you_logged_as">You logged as</string>
</resources>
